--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^4.1.0",
-    "recharts": "^2.12.7",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.12.7",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
@@ -32,4 +33,3 @@
     "vite": "^5.4.10"
   }
 }
-
